--- a/IN451_Unit2.Web/Views/Shared/_Layout.cshtml
+++ b/IN451_Unit2.Web/Views/Shared/_Layout.cshtml
@@ -23,7 +23,19 @@
                         <li class="nav-item">
                             <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-area="" asp-controller="Customer" asp-action="Index">Customers</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-area="" asp-controller="Employee" asp-action="Index">Employees</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" asp-area="" asp-controller="Order" asp-action="Index">Orders</a>
+                        </li>
                     </ul>
+                </div>
+                <div >
+                    @await Html.PartialAsync("_LoginPartial")
                 </div>
             </div>
         </nav>
