--- a/IN451_Unit2.Web/Views/_ViewImports.cshtml
+++ b/IN451_Unit2.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,6 @@
 ﻿@using IN451_Unit2.Web
 @using IN451_Unit2.Models;
+@using IN451_Unit2.Models.ViewModels;
+@using Microsoft.AspNetCore.Mvc;
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
